--- a/public/style/main.css
+++ b/public/style/main.css
@@ -9,7 +9,9 @@
         --color-primary-dark: #3B3220;
         --color-logo-text: #3B322C;
         --color-secondary: #9CCD11;
-        --color-secondary-dark: #557109;
+        --color-secondary-dark: #72970C;
+        --color-third: #9F854F;
+        --color-third-dark: #524528;
         --color-text-light: #9B9B9B;
         --color-text: #383838;
         --color-text-edit: #313131;
