--- a/src/view/compraCriarFornecedor.html
+++ b/src/view/compraCriarFornecedor.html
@@ -102,23 +102,23 @@
                 <div class="title">
                     <legend>Dados do Fornecedor</legend>
                 </div>
-                <div class="read-block">
+                <div class="write-block">
                     <label for="nomeFornecedor">Nome Fornecedor:</label>
                     <input type="text" id="nomeFornecedor" name="nomeFornecedor" required>
                 </div>
-                <div class="read-block">
+                <div class="write-block">
                     <label for="docFornecedor">CNPJ Fornecedor:</label>
                     <input type="text" id="docFornecedor" name="docFornecedor" required>
                 </div>
-                <div class="read-block">
-                    <label for="telefoneFornecedor">Telefone Fornecedor::</label>
+                <div class="write-block">
+                    <label for="telefoneFornecedor">Telefone Fornecedor:</label>
                     <input type="text" id="telefoneFornecedor" name="telefoneFornecedor" required>
                 </div>
-                <div class="read-block">
-                    <label for="cepFornecedor">CEP Fornecedor::</label>
+                <div class="write-block">
+                    <label for="cepFornecedor">CEP Fornecedor:</label>
                     <input type="text" id="cepFornecedor" name="cepFornecedor" required>
                 </div>
-                <div class="read-block">
+                <div class="write-block">
                     <label for="emailFornecedor">Email Fornecedor:</label>
                     <input type="text" id="emailFornecedor" name="emailFornecedor" required>
                 </div>
