--- a/public/style/formCadastro.css
+++ b/public/style/formCadastro.css
@@ -23,15 +23,12 @@ h1.main-title {
 }
  
  form {
-    margin-top: 2rem;
     margin-left: 4rem;
-    margin-bottom: 2rem;
     margin-right: 10rem;
 
     padding-top: 2rem;
-    padding-left: 3rem;
+    padding-left: 5rem;
     padding-right: 2rem;
-    padding-bottom: 4rem;
 
     background: var(--color-button-menu);
 
@@ -185,18 +182,6 @@ legend {
     font-family: Poppins;
 }
 
-.read-block textarea,
-.write-block textarea {
-    padding-top: 2rem;
-    padding-left: 2rem;
-    height: 16rem;
-
-    text-align: start;
-
-    resize: vertical;
-}
-
-
 .foot-block input {
     margin-left: 0.5rem;
     padding-left: 2rem;
@@ -290,173 +275,19 @@ legend {
     width: 3rem;
 }
 
-.foot-dados-Botton {
-    display: flex;
-    justify-content: space-between;
-
-    margin-top: 4rem;
-    margin-right: 5rem;
-    margin-left: 4rem;
-
-}
-
-.foot-dados-Botton .aviso-foot {
-    display: flex;
-}
-
-.foot-dados-Botton .aviso-foot p {
-    margin: auto;
-
-    padding-left: 3rem;
-    line-height: 3rem;
-
-    width: 25rem;
-
-    font-size: 2rem;
-    font-family: Poppins;
-    color: var(--color-text);
-
-}
-
-.button-adicionar{
-    position: relative;
-    display: flex;
-    width: 25rem;
-    border-radius: 0.8rem;
-    border: 0rem;
-
-    padding: 0 auto;
-
-    margin-top: 4rem;
-    margin-right: 5rem;
-    margin-left: 50rem;
-
-    background: var(--color-secondary);
-}
-
-.button-adicionar:hover{
-    transition: 0.2s;
-    background: var(--color-secondary-dark);
-}
-.button-adicionar p{
-    margin: auto 1rem;
-
-    font-size: 2rem;
-    font-family: Poppins;
-}
-
-.button-adicionar img{
-    margin-left: 2rem;
-    height: 6rem;
-    width: 6rem;
-}
-
-.foot-dados-Botton a {
-    margin-top: 1rem;
-    display: flex;
-
-    border-radius: 0.8rem;
-
-    background: var(--color-third);
-    height: 8rem;
-    width: 27rem;
-
-    text-decoration: none;
-}
-.foot-dados-Botton a:hover{
-    transition: 0.2s;
-    background: var(--color-third-dark);
-}
-
-.foot-dados-Botton a img {
-    margin-top: 0;
-    margin-bottom: 0;
-    margin-left: 1rem;
-
-    height: 7rem;
-    width: 7rem;
-}
-
-.foot-dados-Botton a p {
-    padding-left: 2rem;
-    padding-right: 1rem;
-
-    font-size: 2.5rem;
-    font-family: Poppins;
-    color: #000000;
-    text-decoration: none;
-    text-align: center;
-}
-
-.button-Editar {
-    position: absolute;
-    margin-left: 65%;
-    margin-right: 5rem;
-    margin-top: 1rem;
-    margin-bottom: 2rem;
-    display: block;
-
-    padding-top: 1rem;
-    padding-bottom: 1rem;
-    padding-right: 3rem;
-    padding-left: 3rem;
-
-    border-radius: 0.8rem;
-
-    font-size: 3rem;
-    font-family: Poppins;
-
-    background: var(--color-secondary);
-    color: #000000;
-    text-decoration: none;
-}
-
-.button-Editar-Colaborador {
-    position: absolute;
-    margin-left: 50%;
-    margin-right: 5rem;
-    margin-top: 3rem;
-    margin-bottom: 2rem;
-    display: block;
-
-    width: 25rem;
-
-    padding-top: 1rem;
-    padding-bottom: 1rem;
-    padding-right: 3rem;
-    padding-left: 3rem;
-
-    border-radius: 0.8rem;
-
-    font-size: 3rem;
-    font-family: Poppins;
-    text-align: center;
-
-    background: var(--color-secondary);
-    color: #000000;
-    text-decoration: none;
-}
-
-.button-Salvar img,
-.button-Cancelar img {
-    margin: 0;
-    display: flex;
-    width: 4rem;
-}
-
 .button-Salvar {
-    position: absolute;
-    margin-left: 45%;
+    margin-left: 5%;
+    margin-right: 5%;
     margin-top: 3rem;
     margin-bottom: 2rem;
     display: block;
 
-    width: 32rem;
+    width: 25rem;
 
     padding-top: 1rem;
     padding-bottom: 1rem;
-    padding-right: 5rem;
-    padding-left: 5rem;
+    padding-right: 7rem;
+    padding-left: 7rem;
 
     background: var(--color-secondary);
 
@@ -468,84 +299,23 @@ legend {
     font-family: Poppins;
     font-weight: lighter;
 
-    width: auto;
-
     color: #000000;
     text-decoration: none;
 }
 
-.button-Salvar button a {
-    color: #000000;
-    text-decoration: none;
-}
-
-.button-Salvar a {
-    display: flex;
-    font-size: 3rem;
-    font-family: Poppins;
-    font-weight: lighter;
-
-    width: 10rem;
-
-    padding-left: 5rem;
-    padding-right: 5rem;
-
-    color: #000000;
-    text-decoration: none;
-}
 
 .button-Salvar:hover{
     transition: 0.2s;
     background: var(--color-secondary-dark);
 }
 
-.button-Salvar a img {
-    margin-right: 3rem;
-}
-
-.button-Finalizar {
-    position: absolute;
-    margin-left: 50%;
-    margin-right: 5rem;
-    margin-top: 3rem;
-    margin-bottom: 2rem;
-    display: block;
-
-    padding-top: 2rem;
-    padding-bottom: 2rem;
-    padding-right: 3rem;
-    padding-left: 3rem;
-
-    background: var(--color-secondary);
-
-    border-style: none;
-    border-radius: 0.8rem;
-}
-
-.button-Finalizar:hover{
-    transition: 0.2s;
-    background: var(--color-secondary-dark);
-}
-
-.button-Finalizar button a {
-    /*  */
-    color: #000000;
-    text-decoration: none;
-}
-
-.button-Finalizar a {
-    font-size: 3rem;
-    font-family: Poppins;
-    font-weight: lighter;
-}
-
 .botton-foot {
+    padding-left: 2rem;
     display: flex;
     justify-content: space-between;
 }
 
 .button-Cancelar {
-    position: absolute;
     margin-top: 3rem;
     margin-bottom: 2rem;
     display: block;
@@ -574,33 +344,11 @@ legend {
     background: var(--color-button-cancel-dark);
 }
 
-.button-Cancelar button a {
-    padding:0;
-
-    width: 40rem;
-
-    color: #000000;
-    text-decoration: none;
-    text-align: center;
-}
-
 a.button-Cancelar{
-    width: 22rem;
+    width: 15rem;
 
     display: flex;
     font-size: 3rem;
     font-family: Poppins;
     font-weight: lighter;
 }
-
-a.button-Cancelar img {
-    margin-right: 3rem;
-}
-
-.button-Cancelar a{
-
-    font-size: 3rem;
-    font-family: Poppins;
-    font-weight: lighter;
-}
-
