--- a/src/view/armazemDetalhe.html
+++ b/src/view/armazemDetalhe.html
@@ -90,7 +90,7 @@
     <div class="main">
 
         <h1>Armazém
-            <a href="armazem.html">
+            <a href="/armazem">
                 <img src="/imagem/voltar.png" alt="">
                 Voltar
             </a>
